# db-compatibility

./: .coverage  .env  .gitignore  CLAUDE.md  README.md  alembic.ini  package-lock.json  package.json  pyproject.toml
demo/: README.md
docker/: compose.dm8.yml  compose.kingbasees.yml  compose.yml
docs/: architecture-design.md  compatibility-report.md  database-environment-report.md  database-risk-analysis.md  demo-scope.md  kingbase-mssql-driver-investigation.md  sql-compilation-report.md
frontend/: package-lock.json  package.json
research/: kingbasees_compatibility.md
scripts/: deploy_and_test_dm8.sh  seed_data.py  verify_sql_demo.py
sql-compiler-lib/: pyproject.toml
sql-compiler-lib/src/sql_compiler/: __init__.py  engine.py
sql-compiler-lib/src/sql_compiler/builder/: __init__.py  ir_builder.py
sql-compiler-lib/src/sql_compiler/cfg/: builder.py  optimizer.py  serializer.py
sql-compiler-lib/src/sql_compiler/generator/: base.py  dm.py  plpgsql.py
sql-compiler-lib/src/sql_compiler/ir/: __init__.py
sql-compiler-lib/src/sql_compiler/parser/: block_segmenter.py  control_flow_extractor.py  lexer.py
sql-compiler-lib/src/sql_compiler/rewrite/: __init__.py  ast_normalizer.py  rewrite_schemas.py
src/: architecture_guard.py
tests/: conftest.py  test_alembic.py  test_architecture.py  test_baseline_crud.py  test_connection.py  test_decision_synthesis.py  test_dialect.py  test_executor.py  test_migration_difficulties.py  test_reflection.py  test_rewrite_e2e.py  test_rewrite_rules_extended.py  test_schema_builder.py  test_schema_diff.py  test_schema_graph.py  (+6 more)
(+293 files in other folders)
